--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-numpy>=1.26.0
 streamlit==1.39.0
 pandas==2.1.1
+numpy==1.24.0
 statsmodels==0.14.0
 matplotlib==3.8.0
-pmdarima==2.0.3
+pmdarima==1.8.5
 scikit-learn==1.3.0
 plotly==5.15.0
-prophet==1.1.3
+prophet==1.0
+pip==24.2
