--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.39.0
 pandas==2.1.1
-numpy==1.24.0
+numpy>=1.26.0
 statsmodels==0.14.0
 matplotlib==3.8.0
 pmdarima==1.8.5
@@ -8,3 +8,4 @@ scikit-learn==1.3.0
 plotly==5.15.0
 prophet==1.0
 pip==24.2
+setuptools
