--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-numpy>=1.26.0
-pandas==2.1.1
+numpy>=1.17.3
+scipy>=1.3.2
+scikit-learn>=0.22
+pandas>=0.19
+statsmodels>=0.11
+pmdarima==2.0.3
 streamlit==1.39.0
-statsmodels==0.14.0
-matplotlib==3.8.0
-pmdarima==2.0.3  # Ensure version compatibility
-scikit-learn==1.3.0
 plotly==5.15.0
 prophet==1.1.3
-setuptools
